initial setup done

--- a/style.css
+++ b/style.css
@@ -2,8 +2,12 @@
     display: flex;
     justify-content: center;
     padding: 10px 0;
-    border: 1px solid red;
 }
+
 .flex-item {
     margin: 0 5px;
+}
+
+.container.col-10 > p {
+    text-align: justify;
 }
