Add background image to body

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    background: url("pexels-karolina-grabowska-4386366.jpg");
+}
+
 .flex-banner {
     display: flex;
     justify-content: center;
