--- a/style.css
+++ b/style.css
@@ -3,24 +3,24 @@ body {
     background-color: #0F2A3D;
 }
 
-h3, p {
+h3,
+p {
     color: #F5A454;
-    mix-blend-mode: difference !important;
+    /* mix-blend-mode: difference; */
 }
+
 body::after {
     position: absolute;
     content: "";
-    background-color: #719EBD;
+    background-color: #173b53;
     inset: 0;
     left: 35%;
     z-index: -1;
-    clip-path: polygon(
-        30% 0,
-        100% 0,
-        100% 100%,
-        20% 100%,
-        0% 70%
-    );
+    clip-path: polygon(30% 0,
+            100% 0,
+            100% 100%,
+            20% 100%,
+            0% 70%);
 }
 
 .flex-banner {
@@ -43,4 +43,7 @@ body::after {
 
 #mainInputs {
     display: none;
+    background: rgb(2, 53, 129, 0.1); /* This is the color F5A454 with 10% opacity */
+    backdrop-filter: blur(10px); /* This will blur the background */
+    -webkit-backdrop-filter: blur(10px); /* This is for Safari compatibility */
 }
